Update myWidget props

--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "react-cloudinary-upload-widget",
   "version": "1.5.0",
   "description": "react wrapper for cloudinary upload widget",
-  "author": "bubbaspaarx",
+  "author": "arajhansa",
   "license": "MIT",
-  "repository": "bubbaspaarx/react-cloudinary-upload-widget",
+  "repository": "arajhansa/react-cloudinary-upload-widget",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "jsnext:main": "dist/index.es.js",
